<resources>
    <string name="app_name">Forca</string>
    <string name="start_game">Iniciar Jogo</string>
    <string name="settings">Configurações</string>
    <string name="todo">TODO</string>
    <string name="nivel_dificuldade">Nível Dificuldade</string>
    <string name="configuraces">Configurações do Jogo</string>
    <string name="rodadas">Número de Rodadas</string>
    <string name="salvar_e_voltar">Salvar e Voltar</string>
    <string name="palavra_selecionada">Palavra Selecionada</string>
    <string name="campos_letras">Palavra Teste</string>
    <string name="partes_faltando">Partes Faltando</string>
    <string name="cabe_a">Cabeça</string>
    <string name="tronco">Tronco</string>
    <string name="bra_o_direito">Braço Direito</string>
    <string name="bra_o_esquerdo">Braço Esquerdo</string>
    <string name="perna_direita">Perna Direita</string>
    <string name="perna_esquerda">Perna Esquerda</string>
    <string name="letras_escolhidas">Letras Escolhidas</string>
    <string name="letras">- - - - - -</string>
    <string name="rodada_initial">Rodada 1 de</string>
    <string name="_10">10</string>
    <string name="proxima_rodada">Próxima Rodada</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="z1">Z1</string>
    <string name="btntest2">btnTest2</string>
    <string name="voltar_ao_menu">Voltar ao Menu</string>
    <string name="pr_xima_partida">Próxima partida</string>
    <string name="Resultado">Resultado</string>
    <string name="_10_round">10 Rodadas</string>
    <string name="acertos">Palavras Corretas:</string>
    <string name="casa">- Casa</string>
    <string name="erros">Palavras Erradas:</string>
    <string name="teste">- Teste</string>
    <string name="n_o_implementado">Não Implementado</string>
</resources>