<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    tools:context=".view.GamePlayActivity">

    <TextView
        android:id="@+id/txtPalavraSelecionada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/palavra_selecionada"
        android:layout_margin="20dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtCamposPalavra"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txtCamposPalavra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/campos_letras"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPalavraSelecionada" />

    <Button
        android:id="@+id/btn_a"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCamposPalavra"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_b"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/b"
        app:layout_constraintStart_toEndOf="@+id/btn_a"
        app:layout_constraintTop_toTopOf="@+id/btn_a"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_c"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/c"
        app:layout_constraintStart_toEndOf="@+id/btn_b"
        app:layout_constraintTop_toTopOf="@+id/btn_b"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_d"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/d"
        app:layout_constraintStart_toEndOf="@+id/btn_c"
        app:layout_constraintTop_toTopOf="@+id/btn_c"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_e"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/e"
        app:layout_constraintStart_toEndOf="@+id/btn_d"
        app:layout_constraintTop_toTopOf="@+id/btn_d"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_f"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/f"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_e"
        app:layout_constraintTop_toTopOf="@+id/btn_e"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_g"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/g"
        app:layout_constraintStart_toStartOf="@+id/btn_a"
        app:layout_constraintTop_toBottomOf="@+id/btn_a"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_h"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/h"
        app:layout_constraintStart_toEndOf="@+id/btn_g"
        app:layout_constraintTop_toTopOf="@+id/btn_g"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_i"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/i"
        app:layout_constraintStart_toEndOf="@+id/btn_h"
        app:layout_constraintTop_toTopOf="@+id/btn_h"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_j"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/j"
        app:layout_constraintStart_toEndOf="@+id/btn_i"
        app:layout_constraintTop_toTopOf="@+id/btn_i"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_k"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/k"
        app:layout_constraintStart_toEndOf="@+id/btn_j"
        app:layout_constraintTop_toTopOf="@+id/btn_j"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_l"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_k"
        app:layout_constraintTop_toTopOf="@+id/btn_k"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_m"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:text="@string/m"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/btn_g"
        app:layout_constraintTop_toBottomOf="@+id/btn_g"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_n"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/n"
        app:layout_constraintStart_toEndOf="@+id/btn_m"
        app:layout_constraintTop_toTopOf="@+id/btn_m"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_o"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/o"
        app:layout_constraintStart_toEndOf="@+id/btn_n"
        app:layout_constraintTop_toTopOf="@+id/btn_n"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_p"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/p"
        app:layout_constraintStart_toEndOf="@+id/btn_o"
        app:layout_constraintTop_toTopOf="@+id/btn_o"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_q"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/q"
        app:layout_constraintStart_toEndOf="@+id/btn_p"
        app:layout_constraintTop_toTopOf="@+id/btn_p"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_r"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/r"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_q"
        app:layout_constraintTop_toTopOf="@+id/btn_q"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_s"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:text="@string/s"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/btn_m"
        app:layout_constraintTop_toBottomOf="@+id/btn_m"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_t"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/t"
        app:layout_constraintStart_toEndOf="@+id/btn_s"
        app:layout_constraintTop_toTopOf="@+id/btn_s"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_u"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/u"
        app:layout_constraintStart_toEndOf="@+id/btn_t"
        app:layout_constraintTop_toTopOf="@+id/btn_t"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_v"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/v"
        app:layout_constraintStart_toEndOf="@+id/btn_u"
        app:layout_constraintTop_toTopOf="@+id/btn_u"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_w"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/w"
        app:layout_constraintStart_toEndOf="@+id/btn_v"
        app:layout_constraintTop_toTopOf="@+id/btn_v"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_x"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_w"
        app:layout_constraintTop_toTopOf="@+id/btn_w"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_y"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:text="@string/y"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/btn_s"
        app:layout_constraintTop_toBottomOf="@+id/btn_s"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_z"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:text="@string/z"
        app:layout_constraintStart_toEndOf="@+id/btn_y"
        app:layout_constraintTop_toTopOf="@+id/btn_y"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/partesFaltandoLinear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/letrasLinear"
        app:layout_constraintTop_toBottomOf="@+id/btn_y">

        <TextView
            android:id="@+id/txtPartes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partes_faltando"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/opCabeca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cabe_a"
            android:textColor="#424242"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/opTronco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tronco"
            android:textColor="#424242"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/opBracoDireito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bra_o_direito"
            android:textColor="#424242"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/opBracoEsquerdo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bra_o_esquerdo"
            android:textColor="#424242"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/opPernaDireita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perna_direita"
            android:textColor="#424242"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/opPernaEsquerda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perna_esquerda"
            android:textColor="#424242"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/letrasLinear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/partesFaltandoLinear"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/partesFaltandoLinear">

        <TextView
            android:id="@+id/txtLetrasEscolhidas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letras_escolhidas"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLetras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/letras"
            android:textColor="#424242"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtRoundsGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rodada_initial"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_a"
        app:layout_constraintStart_toStartOf="@+id/btn_a" />

    <TextView
        android:id="@+id/txtTotalRounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/txtRoundsGame"
        app:layout_constraintTop_toTopOf="@+id/txtRoundsGame" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/letrasConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/btnLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btnNext"
                android:text="@string/proxima_rodada"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>